--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           <div class="form__item-wrapper form__item-wrapper--phone form__item-wrapper--error">
             <input type="text" class="form__input js-phone" required placeholder="Номер телефона">
           </div>
+          <div class="form__item-wrapper form__item-wrapper--textarea">
+            <textarea rows="2" class="form__textarea js-text" placeholder="Комментарий"></textarea>
+          </div>
           <button type="submit" class="form__submit">ОСТАВИТЬ ЗАЯВКУ</button>
           <div class="form__text">* Нажимая на кнопку "Оставить заявку", вы даете согласие на обработку своих персональных данных.
             <a href="https://www.courson.ru/user-agreement/" class="form__link" target="_blank">Условия использования.</a>
